--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "quecital"
 version = "0.1.1"
-description = ""
+description = "Fact quiz and line recital"
 authors = ["Robert Portelli <github@robertportelli.com>"]
 readme = "README.md"
 packages = [{include = "quecital", from = "src"}]
@@ -10,6 +10,12 @@ packages = [{include = "quecital", from = "src"}]
 python = "^3.11"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^4.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+quecital = "quecital.__main__:cli"
