--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,17 @@ packages = [{include = "quecital", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+click = "^8.1.7"
+tomli-w = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^4.1.0"
+mkdocs-material = "^9.5.3"
+pre-commit = "^3.6.0"
+pytest = "^7.4.4"
+mkdocs = "^1.5.3"
+mkdocstrings = {extras = ["python"], version = "^0.24.0"}
 
 [build-system]
 requires = ["poetry-core"]
