change pyproject.toml python version to 3.11 from <3.11. I'm looking for the reason why quecital's dependencies don't install with it from pip.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "quecital", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "3.11"
 click = "^8.1.7"
 tomli-w = "^1.0.0"
 
