--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,16 @@ jobs:
       #              run test suite
       #----------------------------------------------
       - name: Run tests
+      #----------------------------------------------
+      #   if poetry is managing virtual environment
+      #----------------------------------------------
+      #  run: |
+      #    source .venv/bin/activate
+      #    pytest tests/
+      #    coverage report
+      #----------------------------------------------
+      #           other virtualenv manager
+      #----------------------------------------------
         run: |
-          source .venv/bin/activate
-          pytest tests/
-          coverage report
+          poetry run pytest tests/
+          poetry run coverage report
