--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,5 +61,5 @@ jobs:
       #           other virtualenv manager
       #----------------------------------------------
         run: |
-          poetry run pytest tests/
+          poetry run pytest --cov=tests/
       #    poetry run coverage report
