--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
           version: latest
           virtualenvs-create: true
           virtualenvs-in-project: true
+          installer-parallel: true
 
       #----------------------------------------------
       #       load cached venv if cache exists
@@ -69,5 +70,8 @@ jobs:
       #----------------------------------------------
       #           build and publish mkdocs
       #----------------------------------------------
-      - name: Build and publish MkDocs
-        run: poetry run mkdocs gh-deploy
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site
