--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,4 +72,4 @@ jobs:
       #----------------------------------------------
       - name: Deploy
         run: |
-          poetry run mkdocs gh-deploy
+          mkdocs gh-deploy
