--- a/.github/workflows/01_build.yml
+++ b/.github/workflows/01_build.yml
@@ -1,9 +1,13 @@
-name: test
+name: build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       #----------------------------------------------
@@ -48,28 +52,3 @@ jobs:
       - name: Install project
         run: poetry install --no-interaction
       #----------------------------------------------
-      #              run test suite
-      #----------------------------------------------
-      - name: Run tests
-      #----------------------------------------------
-      #   if poetry is managing virtual environment
-      #----------------------------------------------
-      #  run: |
-      #    source .venv/bin/activate
-      #    pytest tests/
-      #    coverage report
-      #----------------------------------------------
-      #           other virtualenv manager
-      #----------------------------------------------
-        run: |
-          poetry run pytest --cov=tests/
-          poetry run pytest --cov=src/
-          poetry run pytest --cov-report term-missing:skip-covered --cov
-      #    poetry run coverage report
-      #
-      #----------------------------------------------
-      #           build and publish mkdocs
-      #----------------------------------------------
-      - name: Deploy
-        run: |
-          mkdocs gh-deploy
