--- a/.github/workflows/03_deploy.yml
+++ b/.github/workflows/03_deploy.yml
@@ -1,9 +1,10 @@
 name: Deploy
 
 on:
-    push:
-      branches:
-        - main
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   deploy:
