--- a/.github/workflows/02_test.yml.yml
+++ b/.github/workflows/02_test.yml.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           path: ~/.local
           key: poetry-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-      - name: Install Poetry #will want to cache as in snok/install-poetry readme in the future
+      - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
           version: latest
