--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "quecital"
-version = "1.3.1"
+version = "1.3.2"
 description = "Fact quiz and line recital"
 authors = ["Robert Portelli <github@robertportelli.com>"]
 readme = "README.md"
@@ -14,6 +14,7 @@ packages = [{include = "quecital", from = "src"}]
 python = ">=3.11"
 click = "^8.1.7"
 tomli-w = "^1.0.0"
+prompt-toolkit = "^3.0.43"
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^4.1.0"
